2012-09-11  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 10.8.0-digiumphones-rc2 Released.

	* AST-2012-013: Resolve ACL rules being ignored during calls by some
	  IAX2 peers

	* AST-2012-012: Resolve AMI User Unauthorized Shell Access through
	  ExternalIVR

	* r371861: Fix hangup cause passthrough regression.

	  The v1.8 -r369258 change to fix the F and F(x) action logic
	  introduced a regression in passing the hangup cause from the called
	  channel to the caller channel.

	  (closes issue ASTERISK-20287)
	  Reported by: Konstantin Suvorov
	  Patches:
	      app_dial_hangupcause.patch (license #6421) patch uploaded by
	      Konstantin Suvorov (modified)
	      Tested by: rmudgett

	* r372710: Only re-create an SRTP session when needed; respond with
	  correct crypto policy

	  In r356604, SRTP handling was fixed to accomodate multiple crypto
	  keys in an SDP offer and the ability to re-create an SRTP session
	  when the crypto keys changed. In certain circumstances - most
	  notably when a phone is put on hold after having been bridged for a
	  significant amount of time - the act of re-creating the SRTP session
	  causes problems for certain models of	phones.	The patch committed in
	  r356604 always re-created the SRTP session regardless	of whether or
	  not the cryptographic keys changed. Since this is technically
	  not necessary, this patch modifies the behavior to only re-create the
	  SRTP session if Asterisk detects that the remote key has changed.
	  This allows models of phones that do not handle the SRTP session
	  changing to continue to work, while also providing the behavior
	  needed for those phones that do re-negotiate cryptographic keys.

	  (issue ASTERISK-20194)
	  Reported by: Nicolo Mazzon
	  Tested by: Nicolo Mazzon

	  Review: https://reviewboard.asterisk.org/r/2099

	* r372841: Fix bad channel application data reference.

	  When channels get bridged due to an AMI bridge action